[UIRefresh] Implement threaded rendering for DockNotebook

--- a/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
+++ b/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
@@ -1821,6 +1821,7 @@
     <Compile Include="MonoDevelop.Ide.TextEditing\FileExtension.cs" />
     <Compile Include="MonoDevelop.Ide.TextEditing\FileExtensionEventArgs.cs" />
     <Compile Include="MonoDevelop.Components.MainToolbar\StatusAreaBuildTheme.cs" />
+    <Compile Include="MonoDevelop.Components\ThreadedRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Makefile.am" />
