Improve the configuration selector
The platform selector is now an execution target selector.
The configuration selector now shows config names and
platforms. Configuration names are merged together
when possible.

* ExecutionTarget.cs: Add an Id field to ExecutionTarget

* MonoDevelop.Ide.csproj:
* MainToolbar.cs:
* ConfigurationMerger.cs: Use the new configuration merger class to
  fill the configuration combos

--- a/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
+++ b/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
@@ -1825,6 +1825,7 @@
     <Compile Include="MonoDevelop.Ide.TextEditing\FileExtensionEventArgs.cs" />
     <Compile Include="MonoDevelop.Components.MainToolbar\StatusAreaBuildTheme.cs" />
     <Compile Include="MonoDevelop.Components\ThreadedRenderer.cs" />
+    <Compile Include="MonoDevelop.Components.MainToolbar\ConfigurationMerger.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Makefile.am" />
