--- a/main/src/core/MonoDevelop.Core/MonoDevelop.Core.csproj
+++ b/main/src/core/MonoDevelop.Core/MonoDevelop.Core.csproj
@@ -409,25 +409,6 @@
     <Compile Include="MonoDevelop.Core.AddIns\AssemblyInstalledCondition.cs" />
     <Compile Include="MonoDevelop.Core\WebCertificateService.cs" />
     <Compile Include="MonoDevelop.Core\IWebCertificateProvider.cs" />
-    <Compile Include="MonoDevelop.Core.CustomAssemblyReader\AssemblyMetaData.cs" />
-    <Compile Include="MonoDevelop.Core.CustomAssemblyReader\AssemblyReader.cs" />
-    <Compile Include="MonoDevelop.Core.CustomAssemblyReader\CLIHeader.cs" />
-    <Compile Include="MonoDevelop.Core.CustomAssemblyReader\CodedIndex.cs" />
-    <Compile Include="MonoDevelop.Core.CustomAssemblyReader\DataDirectories.cs" />
-    <Compile Include="MonoDevelop.Core.CustomAssemblyReader\DataTypes.cs" />
-    <Compile Include="MonoDevelop.Core.CustomAssemblyReader\IAT.cs" />
-    <Compile Include="MonoDevelop.Core.CustomAssemblyReader\ImportTable.cs" />
-    <Compile Include="MonoDevelop.Core.CustomAssemblyReader\MetadataTable.cs" />
-    <Compile Include="MonoDevelop.Core.CustomAssemblyReader\MethodBody.cs" />
-    <Compile Include="MonoDevelop.Core.CustomAssemblyReader\NameTable.cs" />
-    <Compile Include="MonoDevelop.Core.CustomAssemblyReader\NTSpecificFields.cs" />
-    <Compile Include="MonoDevelop.Core.CustomAssemblyReader\PEFileHeader.cs" />
-    <Compile Include="MonoDevelop.Core.CustomAssemblyReader\AbstractRow.cs" />
-    <Compile Include="MonoDevelop.Core.CustomAssemblyReader\SectionTable.cs" />
-    <Compile Include="MonoDevelop.Core.CustomAssemblyReader\StandardFields.cs" />
-    <Compile Include="MonoDevelop.Core.CustomAssemblyReader\StreamHeader.cs" />
-    <Compile Include="MonoDevelop.Core.CustomAssemblyReader\CallingConvention.cs" />
-    <Compile Include="MonoDevelop.Core.CustomAssemblyReader\BoundStream.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Makefile.am" />
@@ -492,13 +473,14 @@
       <Project>{FEC19BDA-4904-4005-8C09-68E82E8BEF6A}</Project>
       <Name>Mono.Addins.Gui</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\external\ikvm\reflect\IKVM.Reflection.csproj">
+      <Project>{4CB170EF-DFE6-4A56-9E1B-A85449E827A7}</Project>
+      <Name>IKVM.Reflection</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="MonoDevelop.Core.dll.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="MonoDevelop.Core.CustomAssemblyReader\" />
   </ItemGroup>
 </Project>
