--- a/.gitmodules
+++ b/.gitmodules
@@ -22,6 +22,6 @@
 [submodule "main/external/mono-addins"]
 	path = main/external/mono-addins
 	url = git://github.com/mono/mono-addins.git
-[submodule "main/external/ikvm"]
-	path = main/external/ikvm
+[submodule "main/external/ikvmfork"]
+	path = main/external/ikvmfork
 	url = git://github.com/mkrueger/ikvm.git
