--- a/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
+++ b/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
@@ -1629,9 +1629,6 @@
     <Compile Include="gtk-gui\MonoDevelop.Ide.Gui.Components.StringTagSelectorButton.cs" />
     <Compile Include="MonoDevelop.Ide.Gui.Pads.ProjectPad\SolutionFolderFileNodeBuilder.cs" />
     <Compile Include="MonoDevelop.Components\CompactScrolledWindow.cs" />
-    <Compile Include="MonoDevelop.Ide.NavigateToDialog\NavigateToCommand.cs" />
-    <Compile Include="MonoDevelop.Ide.NavigateToDialog\SearchResult.cs" />
-    <Compile Include="MonoDevelop.Ide.NavigateToDialog\ResultsDataSource.cs" />
     <Compile Include="MonoDevelop.Ide.CodeCompletion\MemberCompletionData.cs" />
     <Compile Include="MonoDevelop.Ide.Navigation\DocumentNavigationPoint.cs" />
     <Compile Include="MonoDevelop.Ide.Navigation\NavigationHistoryService.cs" />
@@ -1826,6 +1823,9 @@
     <Compile Include="MonoDevelop.Components.MainToolbar\StatusAreaBuildTheme.cs" />
     <Compile Include="MonoDevelop.Components\ThreadedRenderer.cs" />
     <Compile Include="MonoDevelop.Components.MainToolbar\ConfigurationMerger.cs" />
+    <Compile Include="MonoDevelop.Components.MainToolbar\NavigateToCommand.cs" />
+    <Compile Include="MonoDevelop.Components.MainToolbar\ResultsDataSource.cs" />
+    <Compile Include="MonoDevelop.Components.MainToolbar\SearchResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Makefile.am" />
