--- a/main/src/addins/MonoDevelop.Debugger/MonoDevelop.Debugger.csproj
+++ b/main/src/addins/MonoDevelop.Debugger/MonoDevelop.Debugger.csproj
@@ -195,6 +195,12 @@
     <EmbeddedResource Include="icons\lightning.png">
       <LogicalName>lightning.png</LogicalName>
     </EmbeddedResource>
+    <EmbeddedResource Include="icons\MonoDevelop.Close.Selected.Over.png">
+      <LogicalName>MonoDevelop.Close.Selected.Over.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="icons\MonoDevelop.Close.Selected.png">
+      <LogicalName>MonoDevelop.Close.Selected.png</LogicalName>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
