--- a/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
+++ b/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
@@ -1827,6 +1827,7 @@
     <Compile Include="MonoDevelop.Components.MainToolbar\ResultsDataSource.cs" />
     <Compile Include="MonoDevelop.Components.MainToolbar\SearchResult.cs" />
     <Compile Include="MonoDevelop.Components\ImageButton.cs" />
+    <Compile Include="MonoDevelop.Ide.WelcomePage\WelcomePageApps.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Makefile.am" />
