--- a/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
+++ b/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
@@ -673,9 +673,6 @@
     <EmbeddedResource Include="branding\SplashScreen.png">
       <LogicalName>SplashScreen.png</LogicalName>
     </EmbeddedResource>
-    <EmbeddedResource Include="branding\WelcomePageContent.xml">
-      <LogicalName>WelcomePageContent.xml</LogicalName>
-    </EmbeddedResource>
     <EmbeddedResource Include="icons-components\MonoDevelop.Close.Over.png">
       <LogicalName>MonoDevelop.Close.Over.png</LogicalName>
     </EmbeddedResource>
@@ -1057,9 +1054,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="icons\errors-pad.png">
       <LogicalName>errors-pad.png</LogicalName>
-    </EmbeddedResource>
-    <EmbeddedResource Include="MonoDevelop.Ide.WelcomePage\icons\bar-sticker.png">
-      <LogicalName>bar-sticker.png</LogicalName>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -1719,10 +1713,8 @@
     <Compile Include="MonoDevelop.Ide.Projects\PackageReferencePanel.cs" />
     <Compile Include="MonoDevelop.Ide.WelcomePage\WelcomePageCommands.cs" />
     <Compile Include="MonoDevelop.Ide.WelcomePage\WelcomePageOptionPanel.cs" />
-    <Compile Include="MonoDevelop.Ide.WelcomePage\WelcomePageView.cs" />
     <Compile Include="MonoDevelop.Ide.WelcomePage\WelcomePageWidget.cs" />
     <Compile Include="MonoDevelop.Ide.WelcomePage\WelcomePageOptions.cs" />
-    <Compile Include="MonoDevelop.Ide.WelcomePage\WelcomePageBranding.cs" />
     <Compile Include="MonoDevelop.Ide.WelcomePage\WelcomePageLinkButton.cs" />
     <Compile Include="MonoDevelop.Ide.WelcomePage\WelcomePageNewsFeed.cs" />
     <Compile Include="MonoDevelop.Ide.WelcomePage\WelcomePageRecentProjectsList.cs" />
@@ -1827,7 +1819,12 @@
     <Compile Include="MonoDevelop.Components.MainToolbar\ResultsDataSource.cs" />
     <Compile Include="MonoDevelop.Components.MainToolbar\SearchResult.cs" />
     <Compile Include="MonoDevelop.Components\ImageButton.cs" />
-    <Compile Include="MonoDevelop.Ide.WelcomePage\WelcomePageApps.cs" />
+    <Compile Include="MonoDevelop.Ide.WelcomePage\DefaultWelcomePage.cs" />
+    <Compile Include="MonoDevelop.Ide.WelcomePage\WelcomePageService.cs" />
+    <Compile Include="MonoDevelop.Ide.WelcomePage\WelcomePageFrame.cs" />
+    <Compile Include="MonoDevelop.Ide.WelcomePage\WelcomePageRow.cs" />
+    <Compile Include="MonoDevelop.Ide.WelcomePage\WelcomePageColumn.cs" />
+    <Compile Include="MonoDevelop.Ide.WelcomePage\IWelcomePageProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Makefile.am" />
