Add tip of the day section to default welcome page

--- a/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
+++ b/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
@@ -1825,6 +1825,8 @@
     <Compile Include="MonoDevelop.Ide.WelcomePage\WelcomePageRow.cs" />
     <Compile Include="MonoDevelop.Ide.WelcomePage\WelcomePageColumn.cs" />
     <Compile Include="MonoDevelop.Ide.WelcomePage\IWelcomePageProvider.cs" />
+    <Compile Include="MonoDevelop.Ide.TypeSystem\DocumentData.cs" />
+    <Compile Include="MonoDevelop.Ide.WelcomePage\WelcomePageTipOfTheDaySection.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Makefile.am" />
