--- a/MonoDevelop.FSharpBinding/MonoDevelop.FSharp.windows.fsproj
+++ b/MonoDevelop.FSharpBinding/MonoDevelop.FSharp.windows.fsproj
@@ -14,9 +14,10 @@
     <!-- <OtherFlags> /resident </OtherFlags> -->
     <UsePartialTypes>False</UsePartialTypes>
 
-    <DefineConstants Condition="'3.0.3.2' == '3.0.3.2'">MONODEVELOP_AT_MOST_3_0_3_2;$(DefineConstants)</DefineConstants>
-    <DefineConstants Condition="'3.0.3.2' == '3.0.4.7'">MONODEVELOP_AT_LEAST_3_0_4_7;$(DefineConstants)</DefineConstants>
-    <DefineConstants Condition="'3.0.3' == '3.0.5'">MONODEVELOP_AT_LEAST_3_0_4_7;MONODEVELOP_AT_LEAST_3_0_5;$(DefineConstants)</DefineConstants>
+    <MonoDevelopVersion>3.0.5</MonoDevelopVersion>
+    <DefineConstants Condition="'$(MonoDevelopVersion)' == '3.0.3.2'">MONODEVELOP_AT_MOST_3_0_3_2;$(DefineConstants)</DefineConstants>
+    <DefineConstants Condition="'$(MonoDevelopVersion)' == '3.0.4.7'">MONODEVELOP_AT_LEAST_3_0_4_7;$(DefineConstants)</DefineConstants>
+    <DefineConstants Condition="'$(MonoDevelopVersion)' == '3.0.5'">MONODEVELOP_AT_LEAST_3_0_4_7;MONODEVELOP_AT_LEAST_3_0_5;$(DefineConstants)</DefineConstants>
 
   </PropertyGroup>
 
