--- a/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
+++ b/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
@@ -1826,6 +1826,7 @@
     <Compile Include="MonoDevelop.Ide.WelcomePage\WelcomePageColumn.cs" />
     <Compile Include="MonoDevelop.Ide.WelcomePage\IWelcomePageProvider.cs" />
     <Compile Include="MonoDevelop.Ide.WelcomePage\WelcomePageTipOfTheDaySection.cs" />
+    <Compile Include="MonoDevelop.Components.Docking\DockItemTitleTab.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Makefile.am" />
